alteração html/css

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 
 <body>
+    <>
     <div class="mascara-formulario" onclick="esconderform()"></div>
 
    
@@ -57,7 +58,7 @@
         <button type="submit">Pedir Orçamento</button>
     </form>
     
-    
+</main>  
 </body>
 
 <script src="scripts.js"></script>
